Better Structure Added.

--- a/public/Pages/node.html
+++ b/public/Pages/node.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React JS Tutorial</title>
-    <link rel="stylesheet" href="src/css/styles.css">
+    <title>Node JS Tutorial</title>
+    <link rel="stylesheet" href="/public/src/css/styles.css">
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="main">React JS Tutorial</h2>
+        <h2 class="main">Node JS Tutorial</h2>
         <div class="side-navbar">
             <ul>
                 <li><a href="#topic1">Topic 1</a></li>
