--- a/public/Pages/js.html
+++ b/public/Pages/js.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Tutorial</title>
-    <link rel="stylesheet" href="src/css/styles.css">
+    <title>Javascript Tutorial</title>
+    <link rel="stylesheet" href="/public/src/css/styles.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -28,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="main">HTML Tutorial</h2>
+        <h2 class="main">Javascript Tutorial</h2>
         <div class="side-navbar">
             <ul>
                 <li><a href="#topic1">Topic 1</a></li>
@@ -78,5 +76,4 @@
         </div>
     </main>
 </body>
-
 </html>
