some files changed

--- a/Main/Pages/html.html
+++ b/Main/Pages/html.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Node JS Tutorial</title>
-    <link rel="stylesheet" href="/public/src/css/styles.css">
+    <title>HTML Tutorial</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -26,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="main">Node JS Tutorial</h2>
+        <h2 class="main">HTML Tutorial</h2>
         <div class="side-navbar">
             <ul>
                 <li><a href="#topic1">Topic 1</a></li>
@@ -76,4 +78,5 @@
         </div>
     </main>
 </body>
+
 </html>
