--- a/Main/Pages/index.html
+++ b/Main/Pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - My Website</title>
-    <link rel="stylesheet" href="/public/src/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -35,6 +35,6 @@
     <footer>
         <p>&copy; 2024 My Website</p>
     </footer>
-    <script src="src/js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
