--- a/Main/Pages/index.html
+++ b/Main/Pages/index.html
@@ -15,7 +15,7 @@
 <body>
     <!--Navigation starts-->
     <section id="navigation">
-        <div class="logo"><img src="download.png" width="40" height="40" alt="logo"></div>
+        <div class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-atom"><circle cx="12" cy="12" r="1"/><path d="M20.2 20.2c2.04-2.03.02-7.36-4.5-11.9-4.54-4.52-9.87-6.54-11.9-4.5-2.04 2.03-.02 7.36 4.5 11.9 4.54 4.52 9.87 6.54 11.9 4.5Z"/><path d="M15.7 15.7c4.52-4.54 6.54-9.87 4.5-11.9-2.03-2.04-7.36-.02-11.9 4.5-4.52 4.54-6.54 9.87-4.5 11.9 2.03 2.04 7.36.02 11.9-4.5Z"/></svg></div>
         <nav class="nav-links left">
             <ul>
                 <li><a href="#"><span id="menu">Home</i></span> </a></li>
@@ -52,7 +52,7 @@
         <div class="left-content">
             <h1>HTML</h1>
             <p>The language for building web pages</p>
-            <a href="#" style="text-decoration: none;"><button id="btn-A">Learn HTML</button></a>
+            <a href="html.html" style="text-decoration: none;"><button id="btn-A">Learn HTML</button></a>
             <a href="#" style="text-decoration: none;"><button id="btn-C">HTML Reference</button></a>
         </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="left-content">
             <h1>CSS</h1>
             <p>The language for styling web pages</p>
-            <a href="#" style="text-decoration: none;"><button id="btn-A">Learn CSS</button></a>
+            <a href="css.html" style="text-decoration: none;"><button id="btn-A">Learn CSS</button></a>
             <a href="#" style="text-decoration: none;"><button id="btn-C">CSS Reference</button></a>
         </div>
         </div>
@@ -74,7 +74,7 @@
         <div class="left-content black">
             <h1>JavaScript</h1>
             <p>The language for programming web pages</p>
-            <a href="#" style="text-decoration: none;"><button id="btn-A">Learn JavaScript</button></a>
+            <a href="js.html" style="text-decoration: none;"><button id="btn-A">Learn JavaScript</button></a>
             <a href="#" style="text-decoration: none;"><button id="btn-B">JavaScript Reference</button></a>
         </div>
         </div>
@@ -85,7 +85,7 @@
         <div class="left-content grey">
             <h1>Python</h1>
             <p>A popular programming language</p>
-            <a href="#" style="text-decoration: none;"><button id="btn-A">Learn Python</button></a>
+            <a href="python.html" style="text-decoration: none;"><button id="btn-A">Learn Python</button></a>
             <a href="#" style="text-decoration: none;"><button id="btn-C">Pyhton Reference</button></a>
         </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="left-content grey">
             <h1>NODE</h1>
             <p>A language for accessing databases</p>
-            <a href="#" style="text-decoration: none;"><button id="btn-A">Learn NODE</button></a>
+            <a href="node.html  " style="text-decoration: none;"><button id="btn-A">Learn NODE</button></a>
             <a href="#" style="text-decoration: none;"><button id="btn-C">NODE Reference</button></a>
         </div>
         </div>
