--- a/Main/Pages/index.html
+++ b/Main/Pages/index.html
@@ -53,7 +53,7 @@
             <h1>HTML</h1>
             <p>The language for building web pages</p>
             <a href="html.html" style="text-decoration: none;"><button id="btn-A">Learn HTML</button></a>
-            <a href="#" style="text-decoration: none;"><button id="btn-C">HTML Reference</button></a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" style="text-decoration: none;"><button id="btn-C">HTML Reference</button></a>
         </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
             <h1>CSS</h1>
             <p>The language for styling web pages</p>
             <a href="css.html" style="text-decoration: none;"><button id="btn-A">Learn CSS</button></a>
-            <a href="#" style="text-decoration: none;"><button id="btn-C">CSS Reference</button></a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" style="text-decoration: none;"><button id="btn-C">CSS Reference</button></a>
         </div>
         </div>
     </section>
@@ -75,7 +75,7 @@
             <h1>JavaScript</h1>
             <p>The language for programming web pages</p>
             <a href="js.html" style="text-decoration: none;"><button id="btn-A">Learn JavaScript</button></a>
-            <a href="#" style="text-decoration: none;"><button id="btn-B">JavaScript Reference</button></a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" style="text-decoration: none;"><button id="btn-B">JavaScript Reference</button></a>
         </div>
         </div>
     </section>
@@ -86,7 +86,7 @@
             <h1>Python</h1>
             <p>A popular programming language</p>
             <a href="python.html" style="text-decoration: none;"><button id="btn-A">Learn Python</button></a>
-            <a href="#" style="text-decoration: none;"><button id="btn-C">Pyhton Reference</button></a>
+            <a href="https://developer.mozilla.org/en-US/docs/Glossary/Python" target="_blank" style="text-decoration: none;"><button id="btn-C">Pyhton Reference</button></a>
         </div>
         </div>
     </section>
@@ -94,10 +94,10 @@
     <!--Section Sql starts-->
     <section id="sql" style="background-color:#41956d">
         <div class="left-content grey">
-            <h1>NODE</h1>
+            <h1>Node Js</h1>
             <p>A language for accessing databases</p>
             <a href="node.html  " style="text-decoration: none;"><button id="btn-A">Learn NODE</button></a>
-            <a href="#" style="text-decoration: none;"><button id="btn-C">NODE Reference</button></a>
+            <a href="https://nodejs.org/docs/latest/api/" target="_blank" style="text-decoration: none;"><button id="btn-C">NODE Reference</button></a>
         </div>
         </div>
     </section>
@@ -132,6 +132,8 @@
         </div>
     </footer>
     <!--Section footer ends-->
+
+    <script src="scripts.js"></script>
 </body>
 
 </html>
