--- a/Main/Pages/html.html
+++ b/Main/Pages/html.html
@@ -5,77 +5,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Tutorial</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="page.css">
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="top-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <nav>
+        <nav class="top-nav">
             <ul>
                 <li><a href="html.html">HTML</a></li>
                 <li><a href="css.html">CSS</a></li>
                 <li><a href="js.html">JS</a></li>
-                <li><a href="react.html">React JS</a></li>
+                <li><a href="python.html">Python</a></li>
                 <li><a href="node.html">Node JS</a></li>
             </ul>
         </nav>
     </header>
+    <div class="side-navbar">
+        <ul>
+            <li><a href="#topic1">HTML Home</a></li>
+            <li><a href="#topic2">HTML Introduction</a></li>
+            <li><a href="#topic3">HTML Editors</a></li>
+            <li><a href="#topic4">HTML Basic</a></li>
+            <li><a href="#topic5">HTML Elements</a></li>
+            <li><a href="#topic6">HTML Attributes</a></li>
+            <li><a href="#topic7">HTML Headings</a></li>
+            <li><a href="#topic8">HTML Paragraphs</a></li>
+        </ul>
+    </div>
     <main>
         <h2 class="main">HTML Tutorial</h2>
-        <div class="side-navbar">
-            <ul>
-                <li><a href="#topic1">Topic 1</a></li>
-                <li><a href="#topic2">Topic 2</a></li>
-                <li><a href="#topic3">Topic 3</a></li>
-                <li><a href="#topic4">Topic 4</a></li>
-                <li><a href="#topic5">Topic 5</a></li>
-                <li><a href="#topic6">Topic 6</a></li>
-                <li><a href="#topic7">Topic 7</a></li>
-                <li><a href="#topic8">Topic 8</a></li>
-            </ul>
-        </div>
-        <div class="main">
-            
-            <section id="topic1">
-                <h2>Topic 1</h2>
-                <p>Details about topic 1...</p>
-            </section>
-            <section id="topic2">
-                <h2>Topic 2</h2>
-                <p>Details about topic 2...</p>
-            </section>
-            <section id="topic3">
-                <h2>Topic 3</h2>
-                <p>Details about topic 3...</p>
-            </section>
-            <section id="topic4">
-                <h2>Topic 4</h2>
-                <p>Details about topic 4...</p>
-            </section>
-            <section id="topic5">
-                <h2>Topic 5</h2>
-                <p>Details about topic 5...</p>
-            </section>
-            <section id="topic6">
-                <h2>Topic 6</h2>
-                <p>Details about topic 6...</p>
-            </section>
-            <section id="topic7">
-                <h2>Topic 7</h2>
-                <p>Details about topic 7...</p>
-            </section>
-            <section id="topic8">
-                <h2>Topic 8</h2>
-                <p>Details about topic 8...</p>
-            </section>
-        </div>
+        <p class="intro">HTML is the standard markup language for Web pages.</p>
+        <p class="intro">With HTML you can create your own Website.</p>
+        <p class="intro">HTML is easy to learn - You will enjoy it!</p>
+    
+        <section id="topic1">
+            <h2>HTML Home</h2>
+            <p>Details about HTML Home...</p>
+        </section>
+        <section id="topic2">
+            <h2>HTML Introduction</h2>
+            <p>Details about HTML Introduction...</p>
+        </section>
+        <section id="topic3">
+            <h2>HTML Editors</h2>
+            <p>Details about HTML Editors...</p>
+        </section>
+        <section id="topic4">
+            <h2>HTML Basic</h2>
+            <p>Details about HTML Basic...</p>
+        </section>
+        <section id="topic5">
+            <h2>HTML Elements</h2>
+            <p>Details about HTML Elements...</p>
+        </section>
+        <section id="topic6">
+            <h2>HTML Attributes</h2>
+            <p>Details about HTML Attributes...</p>
+        </section>
+        <section id="topic7">
+            <h2>HTML Headings</h2>
+            <p>Details about HTML Headings...</p>
+        </section>
+        <section id="topic8">
+            <h2>HTML Paragraphs</h2>
+            <p>Details about HTML Paragraphs...</p>
+        </section>
     </main>
 </body>
 
