--- a/Main/Pages/css.html
+++ b/Main/Pages/css.html
@@ -29,52 +29,53 @@
     </header>
     <div class="side-navbar">
         <ul>
-            <li><a href="#topic1">Topic 1</a></li>
-            <li><a href="#topic2">Topic 2</a></li>
-            <li><a href="#topic3">Topic 3</a></li>
-            <li><a href="#topic4">Topic 4</a></li>
-            <li><a href="#topic5">Topic 5</a></li>
-            <li><a href="#topic6">Topic 6</a></li>
-            <li><a href="#topic7">Topic 7</a></li>
-            <li><a href="#topic8">Topic 8</a></li>
+            <li><a href="#topic1">CSS Home</a></li>
+            <li><a href="#topic2">CSS Introduction</a></li>
+            <li><a href="#topic3">CSS Syntax</a></li>
+            <li><a href="#topic4">CSS Selectors</a></li>
+            <li><a href="#topic5">CSS Properties</a></li>
+            <li><a href="#topic6">CSS Box Model</a></li>
+            <li><a href="#topic7">CSS Flexbox</a></li>
+            <li><a href="#topic8">CSS Grid</a></li>
         </ul>
     </div>
     <main>
-
         <h2 class="main">CSS Tutorial</h2>
+        <p class="intro">CSS is the language we use to style a Web page.</p>
+        <p class="intro">With CSS, you can control the color, font, and layout of your HTML elements.</p>
+        <p class="intro">CSS is easy to learn and understand - You will enjoy it!</p>
         <section id="topic1">
-            <h2>Topic 1</h2>
-            <p>Details about topic 1...</p>
+            <h2>CSS Home</h2>
+            <p>Details about CSS Home...</p>
         </section>
         <section id="topic2">
-            <h2>Topic 2</h2>
-            <p>Details about topic 2...</p>
+            <h2>CSS Introduction</h2>
+            <p>Details about CSS Introduction...</p>
         </section>
         <section id="topic3">
-            <h2>Topic 3</h2>
-            <p>Details about topic 3...</p>
+            <h2>CSS Syntax</h2>
+            <p>Details about CSS Syntax...</p>
         </section>
         <section id="topic4">
-            <h2>Topic 4</h2>
-            <p>Details about topic 4...</p>
+            <h2>CSS Selectors</h2>
+            <p>Details about CSS Selectors...</p>
         </section>
         <section id="topic5">
-            <h2>Topic 5</h2>
-            <p>Details about topic 5...</p>
+            <h2>CSS Properties</h2>
+            <p>Details about CSS Properties...</p>
         </section>
         <section id="topic6">
-            <h2>Topic 6</h2>
-            <p>Details about topic 6...</p>
+            <h2>CSS Box Model</h2>
+            <p>Details about CSS Box Model...</p>
         </section>
         <section id="topic7">
-            <h2>Topic 7</h2>
-            <p>Details about topic 7...</p>
+            <h2>CSS Flexbox</h2>
+            <p>Details about CSS Flexbox...</p>
         </section>
         <section id="topic8">
-            <h2>Topic 8</h2>
-            <p>Details about topic 8...</p>
+            <h2>CSS Grid</h2>
+            <p>Details about CSS Grid...</p>
         </section>
-
     </main>
 </body>
 
