--- a/Main/Pages/js.html
+++ b/Main/Pages/js.html
@@ -29,52 +29,53 @@
     </header>
     <div class="side-navbar">
         <ul>
-            <li><a href="#topic1">Topic 1</a></li>
-            <li><a href="#topic2">Topic 2</a></li>
-            <li><a href="#topic3">Topic 3</a></li>
-            <li><a href="#topic4">Topic 4</a></li>
-            <li><a href="#topic5">Topic 5</a></li>
-            <li><a href="#topic6">Topic 6</a></li>
-            <li><a href="#topic7">Topic 7</a></li>
-            <li><a href="#topic8">Topic 8</a></li>
+            <li><a href="#topic1">JS Home</a></li>
+            <li><a href="#topic2">JS Introduction</a></li>
+            <li><a href="#topic3">JS Syntax</a></li>
+            <li><a href="#topic4">JS Variables</a></li>
+            <li><a href="#topic5">JS Operators</a></li>
+            <li><a href="#topic6">JS Functions</a></li>
+            <li><a href="#topic7">JS Events</a></li>
+            <li><a href="#topic8">JS Objects</a></li>
         </ul>
     </div>
     <main>
-
         <h2 class="main">JavaScript Tutorial</h2>
+        <p class="intro">JavaScript is the programming language of the Web.</p>
+        <p class="intro">With JavaScript, you can create dynamic and interactive web content.</p>
+        <p class="intro">JavaScript is easy to learn - You will enjoy it!</p>
         <section id="topic1">
-            <h2>Topic 1</h2>
-            <p>Details about topic 1...</p>
+            <h2>JS Home</h2>
+            <p>Details about JS Home...</p>
         </section>
         <section id="topic2">
-            <h2>Topic 2</h2>
-            <p>Details about topic 2...</p>
+            <h2>JS Introduction</h2>
+            <p>Details about JS Introduction...</p>
         </section>
         <section id="topic3">
-            <h2>Topic 3</h2>
-            <p>Details about topic 3...</p>
+            <h2>JS Syntax</h2>
+            <p>Details about JS Syntax...</p>
         </section>
         <section id="topic4">
-            <h2>Topic 4</h2>
-            <p>Details about topic 4...</p>
+            <h2>JS Variables</h2>
+            <p>Details about JS Variables...</p>
         </section>
         <section id="topic5">
-            <h2>Topic 5</h2>
-            <p>Details about topic 5...</p>
+            <h2>JS Operators</h2>
+            <p>Details about JS Operators...</p>
         </section>
         <section id="topic6">
-            <h2>Topic 6</h2>
-            <p>Details about topic 6...</p>
+            <h2>JS Functions</h2>
+            <p>Details about JS Functions...</p>
         </section>
         <section id="topic7">
-            <h2>Topic 7</h2>
-            <p>Details about topic 7...</p>
+            <h2>JS Events</h2>
+            <p>Details about JS Events...</p>
         </section>
         <section id="topic8">
-            <h2>Topic 8</h2>
-            <p>Details about topic 8...</p>
+            <h2>JS Objects</h2>
+            <p>Details about JS Objects...</p>
         </section>
-
     </main>
 </body>
 
