--- a/Main/Pages/node.html
+++ b/Main/Pages/node.html
@@ -29,52 +29,53 @@
     </header>
     <div class="side-navbar">
         <ul>
-            <li><a href="#topic1">Topic 1</a></li>
-            <li><a href="#topic2">Topic 2</a></li>
-            <li><a href="#topic3">Topic 3</a></li>
-            <li><a href="#topic4">Topic 4</a></li>
-            <li><a href="#topic5">Topic 5</a></li>
-            <li><a href="#topic6">Topic 6</a></li>
-            <li><a href="#topic7">Topic 7</a></li>
-            <li><a href="#topic8">Topic 8</a></li>
+            <li><a href="#topic1">Node.js Home</a></li>
+            <li><a href="#topic2">Node.js Introduction</a></li>
+            <li><a href="#topic3">Node.js Installation</a></li>
+            <li><a href="#topic4">Node.js Modules</a></li>
+            <li><a href="#topic5">Node.js HTTP</a></li>
+            <li><a href="#topic6">Node.js File System</a></li>
+            <li><a href="#topic7">Node.js Events</a></li>
+            <li><a href="#topic8">Node.js NPM</a></li>
         </ul>
     </div>
     <main>
-
-        <h2 class="main">Node Js Tutorial</h2>
+        <h2 class="main">Node.js Tutorial</h2>
+        <p class="intro">Node.js is an open-source, cross-platform, back-end JavaScript runtime environment.</p>
+        <p class="intro">With Node.js, you can build fast and scalable network applications.</p>
+        <p class="intro">Node.js is easy to learn and use - You will enjoy it!</p>
         <section id="topic1">
-            <h2>Topic 1</h2>
-            <p>Details about topic 1...</p>
+            <h2>Node.js Home</h2>
+            <p>Details about Node.js Home...</p>
         </section>
         <section id="topic2">
-            <h2>Topic 2</h2>
-            <p>Details about topic 2...</p>
+            <h2>Node.js Introduction</h2>
+            <p>Details about Node.js Introduction...</p>
         </section>
         <section id="topic3">
-            <h2>Topic 3</h2>
-            <p>Details about topic 3...</p>
+            <h2>Node.js Installation</h2>
+            <p>Details about Node.js Installation...</p>
         </section>
         <section id="topic4">
-            <h2>Topic 4</h2>
-            <p>Details about topic 4...</p>
+            <h2>Node.js Modules</h2>
+            <p>Details about Node.js Modules...</p>
         </section>
         <section id="topic5">
-            <h2>Topic 5</h2>
-            <p>Details about topic 5...</p>
+            <h2>Node.js HTTP</h2>
+            <p>Details about Node.js HTTP...</p>
         </section>
         <section id="topic6">
-            <h2>Topic 6</h2>
-            <p>Details about topic 6...</p>
+            <h2>Node.js File System</h2>
+            <p>Details about Node.js File System...</p>
         </section>
         <section id="topic7">
-            <h2>Topic 7</h2>
-            <p>Details about topic 7...</p>
+            <h2>Node.js Events</h2>
+            <p>Details about Node.js Events...</p>
         </section>
         <section id="topic8">
-            <h2>Topic 8</h2>
-            <p>Details about topic 8...</p>
+            <h2>Node.js NPM</h2>
+            <p>Details about Node.js NPM...</p>
         </section>
-
     </main>
 </body>
 
