--- a/Main/Pages/python.html
+++ b/Main/Pages/python.html
@@ -29,52 +29,55 @@
     </header>
     <div class="side-navbar">
         <ul>
-            <li><a href="#topic1">Topic 1</a></li>
-            <li><a href="#topic2">Topic 2</a></li>
-            <li><a href="#topic3">Topic 3</a></li>
-            <li><a href="#topic4">Topic 4</a></li>
-            <li><a href="#topic5">Topic 5</a></li>
-            <li><a href="#topic6">Topic 6</a></li>
-            <li><a href="#topic7">Topic 7</a></li>
-            <li><a href="#topic8">Topic 8</a></li>
+            <li><a href="#topic1">Python Home</a></li>
+            <li><a href="#topic2">Python Introduction</a></li>
+            <li><a href="#topic3">Python Syntax</a></li>
+            <li><a href="#topic4">Python Variables</a></li>
+            <li><a href="#topic5">Python Data Types</a></li>
+            <li><a href="#topic6">Python Operators</a></li>
+            <li><a href="#topic7">Python Functions</a></li>
+            <li><a href="#topic8">Python Modules</a></li>
         </ul>
     </div>
     <main>
-
         <h2 class="main">Python Tutorial</h2>
+        <p class="intro">Python is a popular programming language. It was created by Guido van Rossum, and released in
+            1991.</p>
+        <p class="intro">It is used for web development (server-side), software development, mathematics, and system
+            scripting.</p>
+        <p class="intro">Python is easy to learn - You will enjoy it!</p>
         <section id="topic1">
-            <h2>Topic 1</h2>
-            <p>Details about topic 1...</p>
+            <h2>Python Home</h2>
+            <p>Details about Python Home...</p>
         </section>
         <section id="topic2">
-            <h2>Topic 2</h2>
-            <p>Details about topic 2...</p>
+            <h2>Python Introduction</h2>
+            <p>Details about Python Introduction...</p>
         </section>
         <section id="topic3">
-            <h2>Topic 3</h2>
-            <p>Details about topic 3...</p>
+            <h2>Python Syntax</h2>
+            <p>Details about Python Syntax...</p>
         </section>
         <section id="topic4">
-            <h2>Topic 4</h2>
-            <p>Details about topic 4...</p>
+            <h2>Python Variables</h2>
+            <p>Details about Python Variables...</p>
         </section>
         <section id="topic5">
-            <h2>Topic 5</h2>
-            <p>Details about topic 5...</p>
+            <h2>Python Data Types</h2>
+            <p>Details about Python Data Types...</p>
         </section>
         <section id="topic6">
-            <h2>Topic 6</h2>
-            <p>Details about topic 6...</p>
+            <h2>Python Operators</h2>
+            <p>Details about Python Operators...</p>
         </section>
         <section id="topic7">
-            <h2>Topic 7</h2>
-            <p>Details about topic 7...</p>
+            <h2>Python Functions</h2>
+            <p>Details about Python Functions...</p>
         </section>
         <section id="topic8">
-            <h2>Topic 8</h2>
-            <p>Details about topic 8...</p>
+            <h2>Python Modules</h2>
+            <p>Details about Python Modules...</p>
         </section>
-
     </main>
 </body>
 
