--- a/Main/Pages/index.html
+++ b/Main/Pages/index.html
@@ -23,6 +23,8 @@
                 <li><a href="#" class="nav references">Contact </i></a></li>
                 <li><a href="#" class="nav exercises">Services </i></a></li>
                 <li><a href="#" class="nav pro">Pro</a></li>
+                <button>Log in</button>
+                <button>Sign up</button>
             </ul>
         </nav>
 
