A new Code Editor feature is added

--- a/Main/Pages/css.html
+++ b/Main/Pages/css.html
@@ -45,6 +45,7 @@
         <p class="intro">With CSS, you can control the color, font, and layout of your HTML elements.</p>
         <p class="intro">CSS is easy to learn and understand - You will enjoy it!</p>
 
+        <a href="codeEditor.html" id="codeEditor">Try Your ideas!</a>
 
         <section id="topic1">
             <h2>CSS Home</h2>
