--- a/Main/Pages/html.html
+++ b/Main/Pages/html.html
@@ -45,6 +45,8 @@
         <p class="intro">With HTML you can create your own Website.</p>
         <p class="intro">HTML is easy to learn - You will enjoy it!</p>
 
+        <a href="codeEditor.html" id="codeEditor">Try Your ideas!</a>
+
         <section id="topic1">
             <h2>HTML Home</h2>
             <p>Details about HTML Home...</p>
